<resources>
    <string name="app_name">Prescription App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Create Username</string>
    <string name="prompt_email2">Confirm Username</string>
    <string name="prompt_password">Create Password</string>
    <string name="prompt_password2">Confirm Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_scan">ScanActivity</string>

    <!-- Strings related to the Prescription Log -->
    <string name="Alprazolam">Alprazolam Last Taken at 7:57am (4 hours, 57 minutes ago) Next dose recommended for 11:57am (Can Safely Consume Next Dose)</string>
    <string name="Lisinopril">Lisinopril Last Taken at 9:20am (2 hours, 37 minutes ago) No additional doses recommended today</string>
    <string name="Levothyroxine">Levothyroxine Last Taken at 10:40am (1 hour, 17 minutes ago) No additional doses recommended today</string>
    <string name="Metformin">Metformin Last Taken at 11:40am (17 minutes ago) Next dose recommended for 7:40pm (7 hours, 43 minutes to go)</string>
</resources>